Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-22963

[Reg 4.9->4.10] Unconfigured qmake project is no longer parser with default kit

XMLWordPrintable

    • 7a87dc0484bfe91ef7cba27e4b84993acd954beb (qt-creator/qt-creator/4.11)

      Opening an unconfigured project is no longer parsed with default kit.

      General messages pane contains: "Cannot parse project "untitled1": No kit selected."
      Though project mode says "Qt Creator uses the kit ..... to parse the project".

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            kandeler Christian Kandeler
            con Eike Ziller
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes