TargetSetupPage: More improvements

- Do not claim we are parsing unconfigured projects.
- Use our concept of a "usable" kit in some places that still used just
the kit's "valid" attribute.
- Merge two labels that belong together.
- Get rid of unneeded state and indirections.

Fixes: QTCREATORBUG-22963
Change-Id: I2481439435e92e98b7e0ba5053a1e8843a961aec
Reviewed-by: Christian Stenger <christian.stenger@qt.io>